integration: sub-task creation, fixes/modification: UI